apps/manifests/demo-app/demo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: devkrolikowski/demo_app:0.1.2 # {"$imagepolicy": "flux-system:demo-app"}
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "50Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
