apps/manifests/demo-app/demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: default
spec:
  rules:
    - host: demo-app.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  demo-app
                port:
                  number: 80
